@startuml

title __MCP's Class Diagram__\n

  package mcp {
    class ParkingSystem {
        + mcp.zones : ArrayList<Zone>
        - main : String
        - tickets : ArrayList<Ticket>
        - staffList : ArrayList<Attendant>
        - scan : Scanner
        + adminlog : Map<String, String>
        + ParkingSystem()
        + addStaff()
        - addStaffInfo()
        + shuffleStaff()
        + removeStaff()
        + assignSpace()
        + receiptGen()
        + searchStaff()
        + checkValidStaffID()
        + checkAvailableStaff()
        - codeGenerator()
        + verifyCode()
        + addTicket()
        + searchTicket()
        - totalPrice()
        - transaction()
        + convertLongToString()
        - showHours()
        - removeTicket()
        + displayAllZones()
        + displayAllStaff()
        + displayAllTickets()
        - removeZoneNum()
        - checkZone()
        + load()
        + save()
    }
  }
  

  package mcp {
    class ParkingSystemApp {
        - filename : String
        - scan : Scanner
        + ParkingSystemApp()
        - initialise()
        - entryMenu()
        - adminMenu()
        - staffMenu()
        - spacecheck()
        - customerEntryMenu()
        - checkadminLogin()
        - askForDisability()
        - getStaffId()
        - staffID()
        - customerMenu()
        - collectMenu()
        - exitMenu()
        - pricefordisabledriver()
        - checkweekend()
        - entry()
        - save()
        {static} + main()
    }
  }
  

  package mcp {
    class Ticket {
        - ticket_number : int
        - parkingspace : int
        - license_no : String
        - ztype : String
        - entry : long
        - token : String
        - zprice : double
        - countdown : long
        + getCountdown()
        + setCountdown()
        + Ticket()
        + Ticket()
        + getToken()
        + setToken()
        + load()
        + save()
        + getParkingspace()
        + setParkingspace()
        + toString()
        + getTicket_number()
        + setTicket_number()
        + getEntry()
        + setEntry()
        + getZprice()
        + setZprice()
        + getLicense_no()
        + setLicense_no()
        + getZtype()
        + setZtype()
    }
  }
  

  package mcp {
    class Zone {
        - zonetype : String
        - space : String[]
        - chargingprice : double
        {static} - occupied : String
        {static} - free : String
        + Zone()
        + Zone()
        - settingSpace()
        + selectSpace()
        + removeSpace()
        + toString()
        + load()
        + save()
        + getZonetype()
        + setZonetype()
        + getSpace()
        + setSpace()
        + getChargingprice()
        + setChargingprice()
    }
  }
  

  ParkingSystem o-- Attendant : staff
  ParkingSystem o-- Zone : zone1
  ParkingSystem o-- Zone : zone2
  ParkingSystem o-- Zone : zone3
  ParkingSystem o-- Zone : zone4
  ParkingSystem o-- Zone : zone5
  ParkingSystemApp o-- Vehicle : vehicle
  ParkingSystemApp o-- ParkingSystem : parkingsystem
  ParkingSystemApp o-- Zone : zoneforparking
  ParkingSystemApp o-- Ticket : eticket
  ParkingSystemApp o-- Standard : s
  ParkingSystemApp o-- Higher : h
  ParkingSystemApp o-- Longer : l
  ParkingSystemApp o-- Coaches : c
  ParkingSystemApp o-- Motorbikes : m


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
